--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: clothes
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
