--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     image: postgres:15
     container_name: postgres-db
     environment:
-      POSTGRES_USER: test
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: clothes
     volumes:
