--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U posrgres"]
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       retries: 10
 
