--- a/server-frontend/.gitignore
+++ b/server-frontend/.gitignore
@@ -1,7 +1,5 @@
 node_modules/
 
 
-VITE_API_BASE_URL=http://13.124.79.106:8080
-
-
-VITE_WS_URL=http://13.124.79.106:8080/ws
+VITE_API_BASE_URL=/api 
+VITE_WS_URL=/ws 
