--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -4,12 +4,12 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.data.redis.host=my-cache-server
+spring.data.redis.host=redis-cache
 spring.data.redis.port=6379
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.server.today_clothes.entity
-mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configurations.map-underscore-to-camel-case=true
 
 fastapi_Url=http://fastapi-server:8000/weather/ai
 
