--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.data.redis.host=redis-cache
+spring.data.redis.host=my-cache-server
 spring.data.redis.port=6379
 
 mybatis.mapper-locations=classpath:mapper/*.xml
@@ -16,6 +16,7 @@ fastapi_Url=http://fastapi-server:8000/weather/ai
 spring.application.name=today_clothes
 spring.jpa.show-sql=true
 spring.sql.init.encoding=UTF-8
+
 
 
 
