--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -10,7 +10,9 @@ services:
         condition: service_healthy
       my-cache-server:
         condition: service_healthy
-    command: sh -c "sleep 10 && java -jar /app.jar"
+    environment:
+      - spring.data.redis.host=my-cache-server
+      - spring.data.redis.port=6379
 
   fastapi-server:
     build: ../ai-backend
@@ -22,6 +24,7 @@ services:
         condition: service_healthy
       my-cache-server:
         condition: service_healthy
+
 
   my-db:
     image: postgres:15
