--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - SPRING_DATA_REDIS_HOST=my-cache-server
       - SPRING_DATA_REDIS_PORT=6379
+    restart: on-failure
 
   fastapi-server:
     build: ../ai-backend
@@ -41,6 +42,8 @@ services:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       retries: 10
+      start_period: 30s
+      timeout: 5s
 
   my-cache-server:
     image: redis:7
