--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.data.redis.host=my-cache-server
-spring.data.redis.port=6379
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:my-cache-server}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.server.today_clothes.entity
@@ -17,6 +17,11 @@ spring.application.name=today_clothes
 spring.jpa.show-sql=true
 spring.sql.init.encoding=UTF-8
 
+spring.data.redis.timeout=2000
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-wait=-1
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
 
 
 
