--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     environment:
       - SPRING_DATA_REDIS_HOST=my-cache-server
       - SPRING_DATA_REDIS_PORT=6379
+      - SERVER_SSL_ENABLED=false
+      - SERVER_PORT=8080
+      - SERVER_ADDRESS=0.0.0.0
     restart: on-failure
 
   fastapi-server:
