--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       POSTGRES_PASSWORD: 1234
       POSTGRES_DB: clothes
     volumes:
-      - /var/lib/postgres_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
