--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.server.today_clothes.entity
 mybatis.configurations.map-underscore-to-camel-case=true
+
 spring.sql.init.mode=always
+spring.sql.init.platform=postgresql
 
 fastapi_Url=http://fastapi-server:8000/weather/ai
 
