--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -13,11 +13,12 @@ mybatis.configurations.map-underscore-to-camel-case=true
 
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
 
 fastapi_Url=http://fastapi-server:8000/weather/ai
 
 spring.application.name=today_clothes
-spring.jpa.show-sql=true
 spring.sql.init.encoding=UTF-8
 
 spring.data.redis.timeout=2000
