--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.schema-locations=classpath:schema.sql
 
 fastapi_Url=http://fastapi-server:8000/weather/ai
 
