--- a/server-backend/src/main/resources/application.properties
+++ b/server-backend/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.schema-locations=classpath:schema.sql
 
+logging.level.org.springframework.security=DEBUG
+
 
 fastapi_Url=http://fastapi-server:8000/weather/ai
 
