--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -57,6 +57,29 @@ services:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       retries: 10
+  frontend-builder:
+    build:
+      context: ../server-frontend
+      dockerfile: Dockerfile
+    container_name: react-builder
+    volumes:
+      - ../server-frontend:/app
+      - /app/node_modules
+    command: [ "npm", "run", "build" ]
+    restart: 'no'
+  nginx:
+    image: nginx:1.24.0
+    container_name: nginx-server
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d
+      - ../server-frontend/dist:/usr/share/nginx/html:ro
+    depends_on:
+      - spring-server
+    restart: always
 
 
 volumes:
