--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ../server-frontend/dist:/usr/share/nginx/html:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - /var/log/letsencrypt:/var/log/letsencrypt:ro
     depends_on:
       - spring-server
     restart: always
