--- a/server-frontend/Dockerfile
+++ b/server-frontend/Dockerfile
@@ -10,5 +10,5 @@ RUN npm run build
 # 2단계: Nginx
 FROM nginx:1.24-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf  # 선택 사항
+COPY ./nginx/nginx.conf /etc/nginx/nginx.conf 
 CMD ["nginx", "-g", "daemon off;"]
