--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -59,7 +59,7 @@ services:
       retries: 10
   frontend-builder:
     build:
-      context: ./
+      context: ../server-frontend
       dockerfile: Dockerfile
     container_name: react-builder
     volumes:
@@ -75,6 +75,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /var/log/letsencrypt:/var/log/letsencrypt:ro
     depends_on:
