--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - ../server-frontend:/app
       - /app/node_modules
     command: [ "npm", "run", "build" ]
-    restart: 'no'
+    restart: always
   nginx:
     image: nginx:1.24.0
     container_name: nginx-server
