--- a/server-frontend/Dockerfile
+++ b/server-frontend/Dockerfile
@@ -12,6 +12,6 @@ RUN npm run build
 FROM nginx:1.24-alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ../server-backend/nginx/nginx.conf /etc/nginx/nginx.conf
 
 CMD ["nginx", "-g", "daemon off;"]
