--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - ../server-frontend:/app
       - /app/node_modules
     command: [ "npm", "run", "build" ]
-    restart: always
+    restart: 'no'
   nginx:
     image: nginx:1.24.0
     container_name: nginx-server
@@ -76,6 +76,7 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d
+      - ../server-frontend/dist:/usr/share/nginx/html:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /var/log/letsencrypt:/var/log/letsencrypt:ro
     depends_on:
