--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -57,16 +57,6 @@ services:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
       retries: 10
-  frontend-builder:
-    build:
-      context: ../server-frontend
-      dockerfile: Dockerfile
-    container_name: react-builder
-    volumes:
-      - ../server-frontend:/app
-      - /app/node_modules
-    command: [ "npm", "run", "build" ]
-    restart: 'no'
   nginx:
     image: nginx:1.24.0
     container_name: nginx-server
@@ -74,11 +64,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d
       - ../server-frontend/dist:/usr/share/nginx/html:ro
+      - /etc/nginx/conf.d:/etc/nginx/conf.d
       - /etc/letsencrypt:/etc/letsencrypt:ro
-      - /var/log/letsencrypt:/var/log/letsencrypt:ro
     depends_on:
       - spring-server
     restart: always
