--- a/server-backend/docker-compose.yml
+++ b/server-backend/docker-compose.yml
@@ -31,6 +31,8 @@ services:
         condition: service_healthy
       my-cache-server:
         condition: service_healthy
+    env_file:
+      - ../server-backend/.env
 
 
 
